# tic-tac-toe

./: LICENSE  README.md  build.sh  configure.sh  debug.sh  meson.build  release.sh  tic_tac_toe.c  vars.sh
include/: app.h  coords.h  input.h
include/term/: term.h
include/tic-tac-toe/: board.h
src/: app.c  input.c  start.c  tic_tac_toe.c
src/term/: term.c
src/tic-tac-toe/: board.c
